--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "build": "browserify view/modeling/script.js -o bundle.js"
+    "build": "browserify script.js -o bundle.js"
   },
   "repository": {
     "type": "git",
